// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformations 1`] = `
Object {
  "clientId": "707222",
  "clientName": Object {
    "givenNames": "Gary",
    "middleNames": undefined,
    "surname": "Alexander",
  },
  "eventDate": 2023-03-18T00:00:00.000Z,
  "metricId": "incarceration_starts",
}
`;

exports[`transformations 2`] = `
Object {
  "clientId": "205752",
  "clientName": Object {
    "givenNames": "Beau",
    "middleNames": undefined,
    "surname": "Riley",
  },
  "eventDate": 2023-04-21T00:00:00.000Z,
  "metricId": "incarceration_starts",
}
`;

exports[`transformations 3`] = `
Object {
  "clientId": "792381",
  "clientName": Object {
    "givenNames": "Deena",
    "middleNames": undefined,
    "surname": "Dunlap",
  },
  "eventDate": 2023-06-07T00:00:00.000Z,
  "metricId": "incarceration_starts",
}
`;

exports[`transformations 4`] = `
Object {
  "clientId": "869516",
  "clientName": Object {
    "givenNames": "Angelo",
    "middleNames": undefined,
    "surname": "Cohen",
  },
  "eventDate": 2023-06-08T00:00:00.000Z,
  "metricId": "incarceration_starts",
}
`;

exports[`transformations 5`] = `
Object {
  "clientId": "170571",
  "clientName": Object {
    "givenNames": "Ward",
    "middleNames": undefined,
    "surname": "Bradley",
  },
  "eventDate": 2023-03-21T00:00:00.000Z,
  "metricId": "incarceration_starts",
}
`;

exports[`transformations 6`] = `
Object {
  "clientId": "461718",
  "clientName": Object {
    "givenNames": "Janette",
    "middleNames": undefined,
    "surname": "Sosa",
  },
  "eventDate": 2023-06-05T00:00:00.000Z,
  "metricId": "incarceration_starts",
}
`;

exports[`transformations 7`] = `
Object {
  "clientId": "837771",
  "clientName": Object {
    "givenNames": "Nora",
    "middleNames": undefined,
    "surname": "Robbins",
  },
  "eventDate": 2022-12-27T00:00:00.000Z,
  "metricId": "incarceration_starts",
}
`;

exports[`transformations 8`] = `
Object {
  "clientId": "617754",
  "clientName": Object {
    "givenNames": "Jason",
    "middleNames": undefined,
    "surname": "Barton",
  },
  "eventDate": 2022-11-24T00:00:00.000Z,
  "metricId": "incarceration_starts",
}
`;

exports[`transformations 9`] = `
Object {
  "clientId": "985771",
  "clientName": Object {
    "givenNames": "Nicholas",
    "middleNames": undefined,
    "surname": "Rhodes",
  },
  "eventDate": 2022-12-24T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
}
`;

exports[`transformations 10`] = `
Object {
  "clientId": "326160",
  "clientName": Object {
    "givenNames": "Ethel",
    "middleNames": undefined,
    "surname": "Leonard",
  },
  "eventDate": 2022-12-21T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
}
`;

exports[`transformations 11`] = `
Object {
  "clientId": "931890",
  "clientName": Object {
    "givenNames": "Ricardo",
    "middleNames": undefined,
    "surname": "Wood",
  },
  "eventDate": 2022-12-24T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
}
`;

exports[`transformations 12`] = `
Object {
  "clientId": "930441",
  "clientName": Object {
    "givenNames": "Stanley",
    "middleNames": undefined,
    "surname": "Maxwell",
  },
  "eventDate": 2022-10-24T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
}
`;

exports[`transformations 13`] = `
Object {
  "clientId": "564940",
  "clientName": Object {
    "givenNames": "Miguel",
    "middleNames": undefined,
    "surname": "Haynes",
  },
  "eventDate": 2022-09-05T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
}
`;

exports[`transformations 14`] = `
Object {
  "clientId": "144925",
  "clientName": Object {
    "givenNames": "Inez",
    "middleNames": undefined,
    "surname": "Griffith",
  },
  "eventDate": 2022-12-07T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
}
`;

exports[`transformations 15`] = `
Object {
  "clientId": "283496",
  "clientName": Object {
    "givenNames": "Gerald",
    "middleNames": undefined,
    "surname": "Barber",
  },
  "eventDate": 2022-09-05T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
}
`;

exports[`transformations 16`] = `
Object {
  "clientId": "334531",
  "clientName": Object {
    "givenNames": "Leroy",
    "middleNames": undefined,
    "surname": "Stone",
  },
  "eventDate": 2022-09-14T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
}
`;

exports[`transformations 17`] = `
Object {
  "clientId": "840134",
  "clientName": Object {
    "givenNames": "Patrick",
    "middleNames": undefined,
    "surname": "Schneider",
  },
  "eventDate": 2022-11-23T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
}
`;

exports[`transformations 18`] = `
Object {
  "clientId": "968048",
  "clientName": Object {
    "givenNames": "Violet",
    "middleNames": undefined,
    "surname": "Johnson",
  },
  "eventDate": 2022-10-17T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
}
`;

exports[`transformations 19`] = `
Object {
  "clientId": "413899",
  "clientName": Object {
    "givenNames": "Warren",
    "middleNames": undefined,
    "surname": "Franklin",
  },
  "eventDate": 2022-11-23T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
}
`;

exports[`transformations 20`] = `
Object {
  "clientId": "415630",
  "clientName": Object {
    "givenNames": "Alta",
    "middleNames": undefined,
    "surname": "Jackson",
  },
  "eventDate": 2022-12-11T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
}
`;

exports[`transformations 21`] = `
Object {
  "clientId": "235261",
  "clientName": Object {
    "givenNames": "Rosie",
    "middleNames": undefined,
    "surname": "Luna",
  },
  "eventDate": 2023-05-06T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
}
`;

exports[`transformations 22`] = `
Object {
  "clientId": "531407",
  "clientName": Object {
    "givenNames": "Glenn",
    "middleNames": undefined,
    "surname": "Francis",
  },
  "eventDate": 2023-04-07T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
}
`;

exports[`transformations 23`] = `
Object {
  "clientId": "436502",
  "clientName": Object {
    "givenNames": "Steve",
    "middleNames": undefined,
    "surname": "Schwartz",
  },
  "eventDate": 2023-02-15T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
}
`;

exports[`transformations 24`] = `
Object {
  "clientId": "339710",
  "clientName": Object {
    "givenNames": "Bertha",
    "middleNames": undefined,
    "surname": "Figueroa",
  },
  "eventDate": 2023-05-14T00:00:00.000Z,
  "metricId": "absconsions_bench_warrants",
}
`;

exports[`transformations 25`] = `
Object {
  "clientId": "803013",
  "clientName": Object {
    "givenNames": "Troy",
    "middleNames": undefined,
    "surname": "Rodgers",
  },
  "eventDate": 2023-02-07T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
}
`;

exports[`transformations 26`] = `
Object {
  "clientId": "470308",
  "clientName": Object {
    "givenNames": "Leo",
    "middleNames": undefined,
    "surname": "Marshall",
  },
  "eventDate": 2023-06-24T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
}
`;

exports[`transformations 27`] = `
Object {
  "clientId": "582059",
  "clientName": Object {
    "givenNames": "Shawn",
    "middleNames": undefined,
    "surname": "Romero",
  },
  "eventDate": 2023-01-18T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
}
`;

exports[`transformations 28`] = `
Object {
  "clientId": "374673",
  "clientName": Object {
    "givenNames": "Jeremiah",
    "middleNames": undefined,
    "surname": "Walsh",
  },
  "eventDate": 2023-01-06T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
}
`;

exports[`transformations 29`] = `
Object {
  "clientId": "128785",
  "clientName": Object {
    "givenNames": "Dorothy",
    "middleNames": undefined,
    "surname": "Luna",
  },
  "eventDate": 2023-04-25T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
}
`;

exports[`transformations 30`] = `
Object {
  "clientId": "914408",
  "clientName": Object {
    "givenNames": "Viola",
    "middleNames": undefined,
    "surname": "Schultz",
  },
  "eventDate": 2023-01-18T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
}
`;

exports[`transformations 31`] = `
Object {
  "clientId": "504894",
  "clientName": Object {
    "givenNames": "Marie",
    "middleNames": undefined,
    "surname": "Hudson",
  },
  "eventDate": 2023-03-20T00:00:00.000Z,
  "metricId": "incarceration_starts_technical_violation",
}
`;
